2004-02-15  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aiff_a.c: Fixed AIFC sample size field.

2004-02-15  Saito <saito2@digitalme.com>

	* timidity/portaudio_a.c:
	  Fix for Win32.
	* configs/msc[67]-project.zip:
	  Add portaudio files and modify projects.
	* timidity/playmidi.c:
	  Fix fatal typo around Chamberlin filter.
	* interface/w32g_pref.c:
	  Fix static reverb level.
	* timidity/reverb.c:
	  Fix reverb level.

2004-02-14  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/mix.c,
	  timidity/sndfont.c, timidity/instrum.c
	  timidity/tables.c, timidity/timidity.c:
	  Fix modulation envelope of SoundFont.
	  Fix bahaviour of filter.
	  Hack up around load_instrument().
	* interface/w32g_subwin3.c:
	  Fix.

2004-02-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* README(.ja), AUTHORS, INSTALL(.ja),
	  doc/C/timidity.1, doc/ja_JP.ujis/timidity.1: Update
	* timidity/wrd_read.c:
	  Revert fix timing @WAIT bug emulation of the original MIMPI
	  player; use -WRd=2 instead

2004-02-14  mput <root@mput.dip.jp>

	* Makefile.am (EXTRA_DIST): Fix to fit below
	* timidity.ide, timidity.mak: Remove
	* timidity/wrd_read.c: Fix aborting about WRD

2004-02-13  mput <root@mput.dip.jp>

	* timidity/tables.c: Add newline at the end of file.
	* timidity/readmidi.c (set_xg_chorus_type): fix flanger.

2004-02-13  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aiff_a.c: Support PE_ULAW/PE_ALAW output.
	* timidity/mfi.c: Support MFi version 3, vibrato and pitch bend.
	* timidity/mac_a.c: Minor fix.

2004-02-13  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/playmidi.c,
	  timidity/effect.c, timidity/readmidi.c:
	  Adjust Freeverb.
	  Fix and adjust Standard Reverb.
	  Fix play_midi_load_instrument().

2004-02-13  mput <root@mput.dip.jp>

	* timidity/optcode.h (d2i): remove
	* timidity/resample.c (initialize_resampler_coeffs):
	  remove C++ style '//' comment

2004-02-13  Eric A. Welsh <ewelsh@ccb.wustl.edu>
